// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`suite should render 1`] = `
<ContextProvider
  value={
    Object {
      "event": Object {
        "key": null,
        "payload": Object {},
      },
      "logEvent": [Function],
    }
  }
/>
`;

exports[`suite should send event with Consumer 1`] = `
<ProvideAmplitude
  apiKey="a41e51ccfa11b3a8c9667d0c2eee620e"
>
  <button
    onClick={[Function]}
  >
    send
  </button>
</ProvideAmplitude>
`;

exports[`suite should send event with useContext 1`] = `
<ProvideAmplitude
  apiKey="a41e51ccfa11b3a8c9667d0c2eee620e"
>
  <LogTestWrapper>
    <div>
      <div>
        [object Object]
      </div>
      <button
        onClick={[Function]}
      >
        send
      </button>
    </div>
  </LogTestWrapper>
</ProvideAmplitude>
`;
